<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:fab="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/more_menu_linear_top"
        android:paddingTop="@dimen/more_menu_linear_top">

        <TextView
            android:id="@+id/cut_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/cut"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/copy_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/copy"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/paste_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/paste"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/delete_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/delete"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/details_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/detail"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/rename_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/rename"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/extract_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/extract"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>


        <TextView
            android:id="@+id/shortcut_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/shortcut_item"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>


        <TextView
            android:id="@+id/share_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/share"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/compress_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/compress"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/selectall_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/select_all"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/unselectall_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/deselect_all"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/select_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/menu_select"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/view_list"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/grid_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/view_grid"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/createfolder_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/create_new_folder"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/show_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/show_file"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/hide_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/hide_file"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/move_to_safe_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/move_safe"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>

        <TextView
            android:id="@+id/remove_to_safe_item_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ripple_bg"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/more_menu_item_padding"
            android:paddingEnd="@dimen/more_menu_padding_left"
            android:paddingStart="@dimen/more_menu_padding_left"
            android:paddingTop="@dimen/more_menu_item_padding"
            android:text="@string/set_public"
            android:textColor="#DE000000"
            android:textSize="@dimen/sort_menu_title_textSize"/>


    </LinearLayout>
</ScrollView>